package reto006;

public class NodoAlumno {
    public Alumno alumno;
    public NodoAlumno siguiente;

    public NodoAlumno(Alumno alumno) {
        this.alumno = alumno;
        this.siguiente = null;
    }
}
